--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Rob The R Score God: a Facebook Messenger Chatbot that inspires millions.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "repository": {
@@ -22,10 +21,7 @@
   },
   "homepage": "https://github.com/lorix-lpan/r-score-god#readme",
   "dependencies": {
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
+    "body-parser": "^1.15.0",
     "express": "^4.13.4"
   }
 }
