--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "request": "^2.71.0"
+  },
+  "devDependencies": {
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^7.0.0"
   }
 }
