--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rob The R Score God: a Facebook Messenger Chatbot that inspires millions.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "cross-env NODE_ENV=development node index.js"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,24 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "request": "^2.71.0"
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "request": "^2.71.0",
+    "superagent": "^1.8.3"
   },
   "devDependencies": {
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "cross-env": "^1.0.7",
+    "css-loader": "^0.23.1",
     "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^7.0.0"
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-react": "^5.0.0",
+    "webpack": "^1.13.0",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
