--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "superagent": "^1.8.3"
   },
   "devDependencies": {
+    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
@@ -40,9 +41,9 @@
     "chai": "^3.5.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-react": "^5.0.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^4.0.0",
+    "eslint-plugin-react": "^5.0.1",
     "mocha": "^2.4.5",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
