--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chatbot",
     "rscore"
   ],
-  "author": "Lawrence Pan <lawrencefeipan@gmail.com>",
+  "author": "Lawrence Pan <lawrencefeipan@gmail.com>, Matthew Scott <scom8642@gmail.com>",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/lorix-lpan/r-score-god/issues"
